--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,30 +15,56 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@expo/config-plugins": "^9.0.14",
     "@expo/vector-icons": "^14.0.2",
+    "@mui/base": "^5.0.0-beta.69",
+    "@react-native-community/slider": "^4.5.5",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@supabase/supabase-js": "^2.48.1",
+    "@types/react-native": "^0.73.0",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "base64-arraybuffer": "^1.0.2",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.27",
     "expo-blur": "~14.0.2",
+    "expo-camera": "~16.0.13",
     "expo-constants": "~17.0.4",
+    "expo-crypto": "^14.0.2",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.21",
+    "expo-sqlite": "~15.1.0",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-share": "^12.0.9",
+    "react-native-sqlite-2": "^3.6.2",
+    "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
